# Shiksha-Sathi

./: README.md
agents/: pyproject.toml
agents/deployment/: deploy.py
agents/recap_agent/: agent.py
agents/title_summarizer_agent/: agent.py
ui/app/api/chat/: route.ts
ui/app/lib/: google-auth.ts
